fix: modal z-index

--- a/frontend/src/components/modal/modal.module.scss
+++ b/frontend/src/components/modal/modal.module.scss
@@ -12,7 +12,7 @@
   max-width: 100vw;
   -webkit-overflow-scrolling: touch;
   overscroll-behavior-y: none;
-  z-index: 100;
+  z-index: 10000;
 
   overflow: hidden;
   &.shown {
